# dragonscope-ashare

./: .gitignore  CONTRIBUTING.md  GITHUB_SETUP.md  PROJECT_CONTROL.md  README.md  ROADMAP.md  pyproject.toml  requirements.txt
app/: __init__.py  config.py  database.py  review_metrics.py  schema.py  settings_store.py  theme_resolver.py  tushare_data.py  web_app.py
app/ui/templates/: base.html  compare_matrix.html  daily.html  empty.html  history.html  index.html  period.html  settings.html
data/: app_settings.example.json  llm_config.example.json  theme_rules.example.json
docs/: system-design.md  system-spec-v1.md
scripts/: compare_periods.py  generate_compare_matrix.py  generate_daily_review.py  generate_daily_review_from_db.py  generate_period_review.py  init_db.py  run_daily_pipeline.py  run_dashboard.py  sync_day.py
