[project]
name = "dragonscope-ashare"
version = "0.1.0"
description = "Open-source A-share dragon-head review and research system."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.2",
  "tushare>=1.4",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
